--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -56,7 +56,7 @@
     <Analyzer Include="C:\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\ValuesUtilities\Editor\ValueRangePropertyDrawers.cs" />
+    <Compile Include="Assets\Scripts\Segment\Editor\SegmentPropertyDrawers.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
