--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -8,8 +8,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <ProjectGuid>{2302A1C8-DF09-58DF-6678-E034B82E7883}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -60,7 +59,9 @@
     <Compile Include="Assets\Scripts\Segment\SegmentOperations.cs" />
     <Compile Include="Assets\Scripts\SingleScriptableObject\SingleScriptableObject.cs" />
     <Compile Include="Assets\Testing\TestScripts\CurrentManagerTest.cs" />
+    <Compile Include="Assets\Scripts\CurrentAssetManager\CurrentToggleAttribute.cs" />
     <Compile Include="Assets\Scripts\Segment\SegmentInt.cs" />
+    <Compile Include="Assets\Testing\TestScripts\CurrentToggleAttributeTest.cs" />
     <Compile Include="Assets\Testing\TestScripts\SegmentUtilityTest.cs" />
     <Compile Include="Assets\Testing\TestScripts\SingleScriptableObjectTest1.cs" />
     <Compile Include="Assets\Scripts\CurrentAssetManager\CurrentAssetsManager.cs" />
